<resources>
	<string name="app_name">LightTube</string>
	<string name="title_home">Home</string>
	<string name="searchbar_hint">Search…</string>
	<string name="title_library">Library</string>
	<string name="title_subscriptions">Subscriptions</string>

	<!-- Setup -->
	<string name="setup_welcome_title">Welcome to LightTube!</string>
	<string name="setup_welcome_body">Let\'s get you started</string>
	<string name="setup_instance_title">Select an instance.</string>
	<string name="setup_instance_body">Your subscriptions &amp; playlists will be saved in the instance you choose</string>
	<string name="setup_instance_or">or</string>
	<string name="setup_instance_custom">Enter an instance URL</string>
	<string name="setup_instance_public">Use a public instance</string>
	<string name="setup_instance_invalid">Unknown instance type: %s</string>
	<string name="setup_instance_api_disabled">⛔ This instance has API access disabled</string>
	<string name="setup_instance_loading">⌛ Loading…</string>
	<string name="setup_instance_load_fail">Failed to get information about %s</string>
	<string name="setup_instance_load_fail_this">this instance</string>
	<string name="setup_custom_instance_title">Use a custom instance</string>
	<string name="setup_custom_instance_body">Manually enter an instance URL below</string>
	<string name="setup_custom_instance_hint">https://…</string>
	<string name="setup_instance_cloudflare">⚠️ Uses Cloudflare</string>
	<string name="setup_instance_custom_select">Click here to use this instance</string>
	<string name="setup_complete_title">All done!</string>
	<string name="setup_complete_body">Everything seems ready! Make sure the following settings are correct before clicking Finish</string>
	<string name="setup_complete_host">Instance Host</string>
	<string name="setup_complete_account">Account</string>
	<string name="setup_complete_account_loggedin"><![CDATA[Logged in as <b>%s</b>]]></string>
	<string name="setup_complete_account_not_loggedin">Not logged in</string>
	<string name="setup_login_title">Log in</string>
	<string name="setup_login_body">Log into an account to sync your subscriptions &amp; playlists between devices.
Your data will be stored in the instance you chose (%s).</string>

	<!-- Login -->
	<string name="login_hint">Log into your LightTube account to continue</string>
	<string name="login_token_received">Received token, logging in…</string>
	<string name="login_token_received_desc">This should not take longer than a few seconds…</string>
	<string name="login_complete">Logged in as %s</string>

	<!-- Actions -->
	<string name="action_next">Next</string>
	<string name="action_select">Select</string>
	<string name="action_login">Login</string>
	<string name="action_register">Register</string>
	<string name="action_skip">Skip</string>
	<string name="action_later">Maybe later</string>
	<string name="action_like">Like</string>
	<string name="action_dislike">Dislike</string>
	<string name="action_share">Share</string>
	<string name="action_download">Download</string>
	<string name="action_save">Save</string>
	<string name="action_comments">Comments</string>
	<string name="action_close">Close</string>
	<string name="action_retry">Retry</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_playlist_play">Play all</string>
	<string name="action_playlist_shuffle">Shuffle</string>
	<string name="action_playlist_create">Create</string>
	<string name="action_delete">Delete</string>
	<string name="action_back">Back</string>
	<string name="action_finish">Finish</string>

	<!-- Templates -->
	<string name="template_instance_info">v%s | Accounts: %s | Proxy: %s</string>
	<string name="template_feed_video_subtitle">%s • %s views • %s</string>
	<string name="template_channel_subtitle">%s • %s</string>
	<plurals name="template_videos">
		<item quantity="one">%s video</item>
		<item quantity="other">%s videos</item>
	</plurals>
	<plurals name="template_subscribers">
		<item quantity="one">%s subscriber</item>
		<item quantity="other">%s subscribers</item>
	</plurals>
	<string name="template_shortint_thousand">%sK</string>
	<string name="template_shortint_million">%sM</string>
	<string name="template_shortint_billion">%sB</string>
	<string name="template_comment_header">%s • %s</string>
	<string name="template_shelf_expand">+%d more</string>

	<!-- General -->
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>
	<string name="search">Search</string>
	<string name="autoplay">Autoplay</string>
	<string name="unknown_renderer">Unknown Renderer</string>
	<string name="renderer_exception">Failed to render %s</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="unavailable">Unavailable</string>
	<string name="bullet">•</string>
	<string name="live">Live</string>
	<string name="comment_pinnedby">Pinned by video author</string>
	<string name="playlist">Playlist</string>
	<string name="unsubscribe">Unsubscribe</string>
	<string name="subscribe">Subscribe</string>
	<string name="subscribed">Subscribed</string>
	<string name="pause">Pause</string>
	<string name="play">Play</string>
	<string name="show_less">Show less</string>
	<string name="dismiss">Dismiss</string>
	<string name="instance_alert">Alert from instance</string>

	<!-- Video info -->
	<string name="video_info_more">…more</string>
	<string name="video_info_likes">Likes</string>
	<string name="video_info_dislikes">Dislikes</string>
	<string name="video_info_views">Views</string>
	<plurals name="video_info_views">
		<item quantity="one">%s view</item>
		<item quantity="other">%s views</item>
	</plurals>
	<string name="video_info_channel_about">About</string>
	<string name="video_info_channel_videos">Videos</string>
	<string name="video_info_description">Description</string>
	<string name="video_info_published">Published</string>
	<string name="video_info_comments">Comments</string>

	<!-- Error messages -->
	<string name="error_connection">Failed to connect to the instance</string>
	<string name="error_lighttube">An error has occurred: %s</string>
	<string name="error_playback">Failed to play video.</string>
	<string name="error_playback_falling_back">Failed to play video. Switching to fallback player.\n(some features will be unavailable)</string>
	<string name="error_intent_filter">Failed to parse URL</string>

	<!-- Error handler -->
	<string name="error_title">LightTube has crashed!</string>
	<string name="error_label_instance">Instance</string>
	<string name="error_label_version">Version</string>
	<string name="error_label_activity">Activity</string>
	<string name="error_label_trace">Stack trace</string>

	<!-- Player settings -->
	<string name="player_quality">Quality</string>
	<string name="player_captions">Captions</string>
	<string name="player_loop">Loop video</string>
	<string name="player_speed">Playback speed</string>
	<string name="player_track">Audio track</string>
	<string name="player_quality_auto">Auto</string>
	<string name="player_speed_default">Normal</string>
	<string name="player_speed_template">%sx</string>

	<!-- Update checker -->
	<string name="update_title">New version available</string>
	<string name="update_subtitle">v%s</string>
	<string name="update_download">Download</string>
	<string name="update_skip">Skip this version</string>
	<string name="update_skip_notice">Update skipped. You can always re-check updates under Settings → About → Check for Updates</string>

	<!-- SponsorBlock -->
	<string name="sponsorblock_skip_template">Skip %s</string>
	<string name="sponsorblock_category_sponsor">sponsor</string>
	<string name="sponsorblock_category_selfpromo">self promotion</string>
	<string name="sponsorblock_category_interaction">interaction</string>
	<string name="sponsorblock_category_intro">intro</string>
	<string name="sponsorblock_category_outro">outro</string>
	<string name="sponsorblock_category_preview">preview</string>
	<string name="sponsorblock_category_music_offtopic">non-music section</string>
	<string name="sponsorblock_category_unknown">segment</string>

	<!-- Notifications -->
	<string name="notifications">Notifications</string>
	<string name="notifications_on">All</string>
	<string name="notifications_off">None</string>

	<!-- Playlists -->
	<string name="edit_playlist_title">Edit playlist</string>
	<string name="edit_playlist_submit">Edit</string>
	<string name="edit_playlist_cancel">Cancel</string>
	<string name="edit_playlist_name">Playlist Title</string>
	<string name="edit_playlist_description">Playlist Description</string>
	<string name="edit_playlist_visibility">Playlist Visibility</string>
	<string name="delete_playlist_title">Delete \"%s\"?</string>
	<string name="delete_playlist_body">This action is irreversible.</string>
	<string name="delete_playlist_cancel">Cancel</string>
	<string name="delete_playlist">Delete</string>
	<string name="delete_playlist_success">Playlist deleted.</string>
	<string name="create_playlist">New Playlist</string>
	<string name="create_playlist_default_title">New Playlist</string>
	<string name="playlist_add_video">Save video to…</string>
	<string name="playlist_video_added">Added to %s.</string>
	<string name="playlist_video_add_failed">Failed to add video (%s)</string>
	<string name="playlist_delete_video_title">Delete video from playlist?</string>
	<string name="playlist_delete_video_body">This action is irreversible.</string>
	<string-array name="playlist_visibility">
		<item>Private</item>
		<item>Unlisted</item>
		<item>Public</item>
	</string-array>

	<!-- Comments -->
	<string name="comments_loading">Loading comments…</string>
	<string name="comments_loading_fail">Failed to load comments.</string>
	<string name="comments_title">Comments</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="lighttube_3_title">Unsupported instance</string>
	<string name="lighttube_3_body">LightTube v2 is not supported in this version of the Android app. Either downgrade to an older version or switch to a different instance</string>
	<string name="lighttube_3_instance">Change instance</string>
</resources>