<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="16dp"
	tools:context=".ui.fragment.setup.SetupWelcomeFragment">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setup_login_title"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<TextView
		android:id="@+id/body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setup_login_body"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

	<Space
		android:layout_width="match_parent"
		android:layout_height="16dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/button_register"
				style="@style/Widget.Material3.Button.TonalButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/action_register" />

			<Space
				android:layout_width="8dp"
				android:layout_height="match_parent" />

			<Button
				android:id="@+id/button_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/action_login" />

		</LinearLayout>

		<Button
			android:id="@+id/button_skip"
			style="@style/Widget.Material3.Button.OutlinedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/action_later" />
	</LinearLayout>

	<Button
		android:id="@+id/button_back"
		style="@style/Widget.Material3.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/action_back" />
</LinearLayout>