<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:padding="16dp"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".ui.fragment.setup.SetupWelcomeFragment">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setup_custom_instance_title"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setup_custom_instance_body"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/field_instance"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="16dp"
		android:hint="@string/setup_custom_instance_hint">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:inputType="textUri"
			android:layout_height="wrap_content" />

	</com.google.android.material.textfield.TextInputLayout>

	<include
		android:id="@+id/instance_card"
		layout="@layout/item_instance" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:gravity="center_vertical">

		<View
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_weight="1"
			android:background="?android:attr/listDivider" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingHorizontal="8dp"
			android:text="@string/setup_instance_or" />

		<View
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_weight="1"
			android:background="?android:attr/listDivider" />
	</LinearLayout>

	<Button
		android:id="@+id/public_instances"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/setup_instance_public" />
</LinearLayout>