<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="dev.kuylar.lighttube.ui.fragment.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_subscriptions"
		android:name="dev.kuylar.lighttube.ui.fragment.SubscriptionsFragment"
		android:label="@string/title_subscriptions"
		tools:layout="@layout/fragment_subscriptions" />

	<fragment
		android:id="@+id/navigation_library"
		android:name="dev.kuylar.lighttube.ui.fragment.LibraryFragment"
		android:label="@string/title_library"
		tools:layout="@layout/fragment_library" />
	<fragment
		android:id="@+id/navigation_search"
		android:name="dev.kuylar.lighttube.ui.fragment.SearchFragment"
		android:label="fragment_search"
		tools:layout="@layout/fragment_search" />
</navigation>