<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:padding="16dp"
	tools:context=".ui.fragment.UpdateFragment">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/update_title"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Large" />

	<TextView
		android:id="@+id/update_subtitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/update_subtitle"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

	<Space
		android:layout_width="match_parent"
		android:layout_height="16dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/update_skip"
			style="@style/Widget.Material3.Button.IconButton.Outlined"
			app:icon="@drawable/ic_close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update_skip" />

		<Space
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/update_download"
			app:icon="@drawable/ic_download"
			style="@style/Widget.Material3.Button.IconButton.Filled"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/update_download" />
	</LinearLayout>
</LinearLayout>